# mangxis

./: .gitignore  Dockerfile  docker-compose.yaml  justfile  manage.py  pyproject.toml
.deploy/nginx/: nginx.conf
.deploy/tailwind/: Dockerfile  docker-compose.yaml
core/: models.py
mangxis/: asgi.py  settings.py  urls.py  wsgi.py
web_app/templates/: base.html
