[project]
name = "mangxis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django==5.1.6",
  "django-environ==0.12.0",
  "django-htmx==1.22.0",
  "django-template-partials==24.4",
  "gunicorn==23.0.0",
  "psycopg[binary]==3.2.5",
  "python-json-logger==3.2.1",
]

[dependency-groups]
dev = ["djade==1.3.2", "ruff==0.9.7"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
